welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:11: error: identifier expected but integer literal found.
def move(3,versLAvant:Boolean){
         ^Program:24: error: ':' expected but '}' found.
}
^