welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def versLAvant():Boolean ={
  if (estFaceMur()==true){
    return true
  }else{
    return false
  }
}


def move(3,versLAvant:Boolean){
  if (versLAvant==true){
    for (compteur<-1 to 3){
    	avance()
    }
  
  }else{
    for (compteur<-1 to 3){
    	retourne()
    }
  }
}